2005-10-21  Andreas Schwab  <schwab@suse.de>

	* dwarf2read.c (isreg): Removed.
	(decode_locdesc): Don't set it.

2005-10-20  Joel Brobecker  <brobecker@adacore.com>

	* Makefile.in (YYFILES): Add ada-lex.c

2005-10-17  Jim Blandy  <jimb@redhat.com>

	* dwarf2expr.c (dwarf_expr_fetch): Use correct comparison to
	detect stack underflow.

2005-10-14  Paul Gilliam  <pgilliam@us.ibm.com>

        * rs6000-tdep.c (rs6000_register_reggroup_p): Add vscr to test for
        vector registers.

2005-10-13  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (linux-thread-db.o): Depend on $(gdbcore_h).

	* linux-thread-db.c (enable_thread_event): Extend pointer value as
	specified by target.
	(thread_db_get_thread_local_address): Likewise.

2005-10-09  Joel Brobecker  <brobecker@adacore.com>

	* i386-tdep.c (i386_reg_struct_return_p): Allow array types as well.
	(i386_return_value): Add handling for functions that return array
	types.

2005-10-09  Joel Brobecker  <brobecker@adacore.com>

	* ada-valprint.c (print_optional_low_bound): Handle properly
	cases where the array index type is a TYPE_CODE_RANGE.

2005-10-09  Joel Brobecker  <brobecker@adacore.com>

	* valprint.c (val_print_array_elements): Check array size before
	computing its low bound. If zero, then use a default bound of zero.

2005-10-06  Alan Modra  <amodra@bigpond.net.au>

	PR 1659
	* rs6000-tdep.c (rs6000_push_dummy_call): Correct size of
	backchain write.
	(rs6000_convert_from_func_ptr_addr): Correct comment.

2005-10-03  Joel Brobecker  <brobecker@adacore.com>

	* MAINTAINERS: Add section for release management.

2005-10-03  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Add entry for new "set print array-indexes" command.

2005-10-03  Joel Brobecker  <brobecker@adacore.com>

	* language.h (language_defn): New field la_print_array_index.
	(LA_PRINT_ARRAY_INDEX): New macro.
	(default_print_array_index): Add declaration.
	* language.c (default_print_array_index): new function.