@@ -1,3 +1,8 @@
+2005-10-20  Mark Kettenis  <kettenis@gnu.org>
+
+	* rs6000-tdep.c (info_powerpc_cmdlist): Remove variable.
+	(rs6000_info_powerpc_command): Remove function.
+
 2005-10-21  Andreas Schwab  <schwab@suse.de>
 
 	* dwarf2read.c (isreg): Removed.
